# embedded_unit_test_framework

./: .gitignore  CMakeLists.txt  Dockerfile
src/: driver.c  driver.h  hal.c  hal.h  main.c
tests/: CMakeLists.txt  mock.c  mocks.c  mocks.h  test_adc.c  testrunner.c
